// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphReducer should handle all defined error types: rejected types GET_GRAPH_CAPACITY_RHSM 1`] = `
Object {
  "result": Object {
    "capacity": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "component": Object {},
    "report": Object {},
    "reportCapacity": Object {},
  },
  "type": "GET_GRAPH_CAPACITY_RHSM_REJECTED",
}
`;

exports[`GraphReducer should handle all defined error types: rejected types GET_GRAPH_REPORT_CAPACITY_RHSM 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {},
    "report": Object {},
    "reportCapacity": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
  },
  "type": "GET_GRAPH_REPORT_CAPACITY_RHSM_REJECTED",
}
`;

exports[`GraphReducer should handle all defined error types: rejected types GET_GRAPH_REPORT_RHSM 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {},
    "report": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "reportCapacity": Object {},
  },
  "type": "GET_GRAPH_REPORT_RHSM_REJECTED",
}
`;

exports[`GraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_CAPACITY_RHSM 1`] = `
Object {
  "result": Object {
    "capacity": Object {
      "data": Object {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "component": Object {},
    "report": Object {},
    "reportCapacity": Object {},
  },
  "type": "GET_GRAPH_CAPACITY_RHSM_FULFILLED",
}
`;

exports[`GraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_REPORT_CAPACITY_RHSM 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {},
    "report": Object {},
    "reportCapacity": Object {
      "data": Object {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
  },
  "type": "GET_GRAPH_REPORT_CAPACITY_RHSM_FULFILLED",
}
`;

exports[`GraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_REPORT_RHSM 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {},
    "report": Object {
      "data": Object {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "reportCapacity": Object {},
  },
  "type": "GET_GRAPH_REPORT_RHSM_FULFILLED",
}
`;

exports[`GraphReducer should handle all defined pending types: pending types GET_GRAPH_CAPACITY_RHSM 1`] = `
Object {
  "result": Object {
    "capacity": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "component": Object {},
    "report": Object {},
    "reportCapacity": Object {},
  },
  "type": "GET_GRAPH_CAPACITY_RHSM_PENDING",
}
`;

exports[`GraphReducer should handle all defined pending types: pending types GET_GRAPH_REPORT_CAPACITY_RHSM 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {},
    "report": Object {},
    "reportCapacity": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
  },
  "type": "GET_GRAPH_REPORT_CAPACITY_RHSM_PENDING",
}
`;

exports[`GraphReducer should handle all defined pending types: pending types GET_GRAPH_REPORT_RHSM 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {},
    "report": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "reportCapacity": Object {},
  },
  "type": "GET_GRAPH_REPORT_RHSM_PENDING",
}
`;

exports[`GraphReducer should handle specific defined types: defined type SET_GRAPH_GRANULARITY_RHSM 1`] = `
Object {
  "result": Object {
    "capacity": Object {},
    "component": Object {
      "endDate": 2019-07-20T23:59:59.999Z,
      "graphGranularity": undefined,
      "startDate": 2019-06-20T00:00:00.000Z,
    },
    "report": Object {},
    "reportCapacity": Object {},
  },
  "type": "SET_GRAPH_GRANULARITY_RHSM",
}
`;
